--- a/glog-gflags/CMakeLists.txt
+++ b/glog-gflags/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(glog-gflags)
  
-set(CMAKE_BUILD_TYPE "Debug") # Debug/Release
+#set(CMAKE_BUILD_TYPE "Debug") # Debug/Release
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
  
