--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.associations": {
+    "*.excalidraw": "json",
+    "*.excalidrawlib": "json",
     "cctype": "cpp",
     "clocale": "cpp",
     "cmath": "cpp",
@@ -102,6 +104,7 @@
     "xstring": "cpp",
     "xtr1common": "cpp",
     "xtree": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "random": "cpp"
   }
 }
